@@ -12,7 +12,10 @@ import org.springframework.security.oauth2.server.resource.authentication.JwtAut
 import org.springframework.security.oauth2.server.resource.authentication.JwtGrantedAuthoritiesConverter;
 import org.springframework.stereotype.Component;
 
-import java.util.*;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.Map;
+import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -54,12 +57,12 @@ public class JwtAuthConverter implements Converter<Jwt, AbstractAuthenticationTo
         Map<String, Object> resource;
         Collection<String> resourceRoles;
         if (jwt.getClaim("resource_access") == null) {
-            return Collections.emptySet();
+            return Set.of();
         }
         resourceAccess = jwt.getClaim("resource_access");
 
         if (resourceAccess.get(resourceId) == null) {
-            return Collections.emptySet();
+            return Set.of();
         }
         resource = (Map<String, Object>) resourceAccess.get(resourceId);
 
